[tool.poetry]
name = "try-python"
version = "1.0.1"
description = "This is my TUROTIAL project for python."
authors = ["devlights <gsf.zero1@devlights.onmicrosoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trypython"}]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2022.10.31"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"
pydocstyle = "^6.1.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
