[project]
name = "try-python"
version = "1.0.1"
description = "This is my TUROTIAL project for python."
authors = [{ name = "devlights", email = "gsf.zero1@devlights.onmicrosoft.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["regex>=2024.0.0"]

[dependency-groups]
dev = [
    "ty",
    "ruff",
    "pytest",
    "mypy",
]

[tool.uv.build-backend]
module-name = ["trypython"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
